--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">NFC</string>
+    <string name="facebook_app_id">349208312271337</string>
+    <string name="fb_login_protocol_scheme">fb349208312271337</string>
 </resources>
